Rename html file

--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 .grid-container {
   display: inline-block;
   padding: 20px; /* extend photo outward */
-  background-image: url('./crossword_photo.jpg');
+  background-image: url('combos_photo.jpg');
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
