--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
     height: 100%;
     text-align: center;
     font-size: 20px;
+    color: black;
     border: 1px solid #ccc;
     border-radius: 6px;
     background-color: white;
@@ -61,7 +62,7 @@
     top: 3px;
     left: 4px;
     font-size: 10px;
-    color: #666;
+    color: black;
   }
 
   .clues {
