--- a/index.html
+++ b/index.html
@@ -36,7 +36,6 @@
     height: 100%;
     text-align: center;
     font-size: 20px;
-    color: black;
     border: 1px solid #ccc;
     border-radius: 6px;
     background-color: white;
@@ -62,7 +61,6 @@
     top: 3px;
     left: 4px;
     font-size: 10px;
-    color: black;
   }
 
   .clues {
@@ -127,12 +125,29 @@
 .grid-container {
   display: inline-block;
   padding: 20px; /* extend photo outward */
-  background-image: url('combos_photo.jpg');
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
   border-radius: 10px; /* optional, rounded edges */
-  opacity: 0.30; /* make the background photo slightly transparent */
+  position: relative;
+}
+
+.grid-container::before {
+  content: "";
+  position: absolute;
+  top: 0; left: 0; right: 0; bottom: 0;
+  background-image: url('combos_photo.jpg');
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  opacity: 0.30;
+  z-index: 0;
+  border-radius: 10px;
+}
+
+.grid-container table {
+  position: relative;
+  z-index: 1;
 }
 
 #subtitle {
