--- a/index.html
+++ b/index.html
@@ -91,6 +91,7 @@
 
   button {
     padding: 10px 20px;
+    margin-top: 10px;
     background-color: #6c63ff;
     border: none;
     border-radius: 6px;
