--- a/index.html
+++ b/index.html
@@ -451,7 +451,7 @@ function check() {
     result.innerHTML = "Siii you are combos!!!<br>Feliz cumpleaños Carlitosss! 🎉";
   } else {
     result.style.color = "#B22222";
-    result.textContent = "Aha! I knew it you weren't real combos!";
+    result.textContent = "Aha! I knew it you were traityy!";
   }
 }
 </script>
